-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.3.0
-
None
-
-
e9b56cf4d1 (qt/qtmultimedia/dev)
-
2022wk16FOAndroid&Automotive
I QTestLib: PASS : tst_QVideoFrame::isWritable()
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 ARGB32) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_ARGB32_Premultiplied
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 ARGB32_Premultiplied) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_ARGB32_Premultiplied
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 RGB32) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 BGRA32) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_ARGB32_Premultiplied
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 BGRA32_Premultiplied) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_ARGB32_Premultiplied
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 BGR32) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 AYUV) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_ARGB32_Premultiplied
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 YUV420P) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 YV12) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 UYVY) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 YUYV) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 NV12) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: FAIL! : tst_QVideoFrame::image(64x64 NV21) Compared values are not the same
I QTestLib: Actual (img.format()): Format_RGBA8888_Premultiplied
I QTestLib: Expected (imageFormat) : Format_RGB32
I QTestLib: Loc: [/home/pekka/dev_qt6_third/qt6/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(996)]
I QTestLib: PASS : tst_QVideoFrame::emptyData()
I QTestLib: PASS : tst_QVideoFrame::cleanupTestCase()
I QTestLib: Totals: 62 passed, 13 failed, 0 skipped, 0 blacklisted, 55ms
I QTestLib: ********* Finished testing of tst_QVideoFrame *********
********************* BELOW FIXED *********************
12: ********* Start testing of tst_QVideoFrame *********
12: Config: Using QtTest library 6.3.0, Qt 6.3.0 (arm64-little_endian-lp64 shared (dynamic) release build; by Clang 12.0.8 (https://android.googlesource.com/toolchain/llvm-project c935d99d7cf2016289302412d708641d52d2f7ee)), android 12.0
12: PASS : tst_QVideoFrame::initTestCase()
12: PASS : tst_QVideoFrame::create(64x64 ARGB32)
12: PASS : tst_QVideoFrame::create(32x256 YUV420P)
12: PASS : tst_QVideoFrame::createInvalid(0x64 ARGB32 0 size)
12: PASS : tst_QVideoFrame::createInvalid(32x0 YUV420P 0 size)
12: PASS : tst_QVideoFrame::createFromBuffer(64x64 ARGB32 no handle)
12: PASS : tst_QVideoFrame::createFromBuffer(64x64 ARGB32 gl handle)
12: FAIL! : tst_QVideoFrame::createNull() Compared values are not the same
12: Actual (frame.startTime()): 0
12: Expected (qint64(-1)) : -1
12: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(294)]
12: PASS : tst_QVideoFrame::destructor()
12: PASS : tst_QVideoFrame::copy(64x64 ARGB32)
12: PASS : tst_QVideoFrame::copy(64x64 ARGB32)
12: PASS : tst_QVideoFrame::copy(32x256 YUV420P)
12: PASS : tst_QVideoFrame::copy(1052x756 ARGB32)
12: PASS : tst_QVideoFrame::copy(32x256 YUV420P)
12: FAIL! : tst_QVideoFrame::assign(64x64 ARGB32) Compared values are not the same
12: Actual (frame.startTime()): 0
12: Expected (qint64(-1)) : -1
12: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(532)]
12: FAIL! : tst_QVideoFrame::assign(32x256 YUV420P) Compared values are not the same
12: Actual (frame.startTime()): 0
12: Expected (qint64(-1)) : -1
12: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/unit/multimedia/qvideoframe/tst_qvideoframe.cpp(532)]
12: PASS : tst_QVideoFrame::map(read-only)
12: PASS : tst_QVideoFrame::map(write-only)
12: PASS : tst_QVideoFrame::map(read-write)
12: PASS : tst_QVideoFrame::mapPlanes(Planar)
12: PASS : tst_QVideoFrame::mapPlanes(Format_YUV420P)
12: PASS : tst_QVideoFrame::mapPlanes(Format_YV12)
12: PASS : tst_QVideoFrame::mapPlanes(Format_NV12)
12: PASS : tst_QVideoFrame::mapPlanes(Format_NV21)
12: PASS : tst_QVideoFrame::mapPlanes(Format_IMC2)
12: PASS : tst_QVideoFrame::mapPlanes(Format_IMC4)
12: PASS : tst_QVideoFrame::mapPlanes(Format_IMC1)
12: PASS : tst_QVideoFrame::mapPlanes(Format_IMC3)
12: PASS : tst_QVideoFrame::mapPlanes(Format_ARGB32)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_RGB32 | QVideoFrameFormat::Format_BGRX8888)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_ARGB32 | QVideoFrameFormat::Format_BGRA8888)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_ARGB32_Premultiplied | QVideoFrameFormat::Format_BGRA8888_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_ARGB8888)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_ARGB8888_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_MonoLSB)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_Indexed8)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_ARGB6666_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_ARGB8555_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_RGB666)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_RGB444)
12: PASS : tst_QVideoFrame::formatConversion(QImage::Format_ARGB4444_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_BGR32)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_AYUV)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_AYUV_Premultiplied)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_YUV420P)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_YV12)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_UYVY)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_YUYV)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_NV12)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_NV21)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_IMC1)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_IMC2)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_IMC3)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_IMC4)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_Y8)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_Y16)
12: PASS : tst_QVideoFrame::formatConversion(QVideoFrameFormat::Format_Jpeg)
12: PASS : tst_QVideoFrame::isMapped()
12: PASS : tst_QVideoFrame::isReadable()
12: PASS : tst_QVideoFrame::isWritable()
12: PASS : tst_QVideoFrame::image(64x64 ARGB32)
12: PASS : tst_QVideoFrame::image(64x64 ARGB32_Premultiplied)
12: PASS : tst_QVideoFrame::image(64x64 RGB32)
12: PASS : tst_QVideoFrame::image(64x64 BGRA32)
12: PASS : tst_QVideoFrame::image(64x64 BGRA32_Premultiplied)
12: PASS : tst_QVideoFrame::image(64x64 BGR32)
12: PASS : tst_QVideoFrame::image(64x64 AYUV)
12: PASS : tst_QVideoFrame::image(64x64 YUV420P)
12: PASS : tst_QVideoFrame::image(64x64 YV12)
12: PASS : tst_QVideoFrame::image(64x64 UYVY)
12: PASS : tst_QVideoFrame::image(64x64 YUYV)
12: PASS : tst_QVideoFrame::image(64x64 NV12)
12: PASS : tst_QVideoFrame::image(64x64 NV21)
12: PASS : tst_QVideoFrame::emptyData()
12: PASS : tst_QVideoFrame::cleanupTestCase()
12: Totals: 72 passed, 3 failed, 0 skipped, 0 blacklisted, 3ms
12: ********* Finished testing of tst_QVideoFrame ********
This should be a bug, not a User Story, but cannot change it now
- resulted from
-
QTBUG-99091
Failing Android Multimedia integration tests
-
- Closed
-
| For Gerrit Dashboard: QTBUG-99093 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 385526,2 | Fix tst_qvideoframe failure | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 385707,2 | Fix tst_qvideoframe failure | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 407512,5 | Fix for QImage format issue in the qImageFromVideoFrame function | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 407623,1 | Fix for QImage format issue in the qImageFromVideoFrame function | 6.3 | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
| 407624,1 | Fix for QImage format issue in the qImageFromVideoFrame function | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: ABANDONED | 0 | 0 |