Fix tst_qvideoframe failure

The test was expecting for a null frame to return -1 on the starttime
and endtime. That was the behavior for a long time, so it was reverted.

Fixes: QTBUG-99093
Pick-to: 6.2
Change-Id: Ide3143b772cea65d402ae5fe0f0886b876f93e73
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>